syntax = "proto3";

package pachyderm.worker.pipeline.transform;
option go_package = "github.com/pachyderm/pachyderm/v2/src/server/worker/pipeline/transform";

import "gogoproto/gogo.proto";

import "pfs/pfs.proto";
import "pps/pps.proto";
import "server/worker/datum/datum.proto";

message DatumSet {
  // Inputs
  string job_id = 1 [(gogoproto.customname) = "JobID"];
  string file_set_id = 2;
  pfs_v2.PathRange path_range = 3;
  pfs_v2.Commit output_commit = 4;

  // Outputs
  string output_file_set_id = 5;
  string meta_file_set_id = 6;
  datum.Stats stats = 7;
}

message ComputeParallelDatumsTask {
  pps_v2.JobInfo job_info = 1;
  string file_set_id = 2;
  string base_file_set_id = 3;
  pfs_v2.PathRange path_range = 4;
} 

message ComputeParallelDatumsTaskResult {
  string file_set_id = 1;
  datum.Stats stats = 2;
}

message ComputeSerialDatumsTask {
  pps_v2.JobInfo job_info = 1;
  string file_set_id = 2;
  pfs_v2.Commit base_meta_commit = 3;
  bool no_skip = 4;
  pfs_v2.PathRange path_range = 5;
}

message ComputeSerialDatumsTaskResult {
  string file_set_id = 1;
  string output_delete_file_set_id = 2;
  string meta_delete_file_set_id = 3;
  datum.Stats stats = 4;
} 

message CreateDatumSetsTask {
  string file_set_id = 1;
  pfs_v2.PathRange path_range = 2;
} 

message CreateDatumSetsTaskResult {
  repeated pfs_v2.PathRange datum_sets = 1;
} 
